@@ -34,6 +34,8 @@
 #  
 ##########################################################################
 
+from __future__ import with_statement
+
 import IECore
 
 import Gaffer
