@@ -35,6 +35,8 @@
 #  
 ##########################################################################
 
+from __future__ import with_statement
+
 import operator
 import time
 
