@@ -1,3 +1,5 @@
+* Using future to import with_statement for python 2.5 compatibility
+
 0.19.0
 ------
 
